# EasyWinApi

./: CMakeLists.txt
examples/Shooting shuttle/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
examples/Shooting shuttle/entities/: Bullet.cpp  Bullet.hpp  BulletGenerator.cpp  BulletGenerator.hpp  Button.cpp  Button.hpp  Enemy.cpp  Enemy.hpp  Ship.cpp  Ship.hpp
examples/Shooting shuttle/utils/: Level.cpp  Level.hpp  Lobby.cpp  Lobby.hpp
include/ewa/: ewa.hpp
include/ewa/common/: Bitmap.hpp  Brush.hpp  Color.hpp  Key.hpp  Pen.hpp  Point.hpp  Rect.hpp  Size.hpp
include/ewa/core/: AudioPlayer.hpp  CoreApplication.hpp  Event.hpp  EventFilter.hpp  Keyboard.hpp
include/ewa/paints/: BMPCanvas.hpp  Canvas.hpp
include/ewa/paints/2d/: Drawable.hpp  Figure2d.hpp  Scene2d.hpp
include/ewa/widgets/: Widget.hpp  Window.hpp
src/common/: Bitmap.cpp  Brush.cpp  Pen.cpp  Rect.cpp  Size.cpp
src/core/: AudioPlayer.cpp  CoreApplication.cpp  EventFilter.cpp  Keyboard.cpp
src/paints/: BMPCanvas.cpp  Canvas.cpp
src/paints/2d/: Figure2d.cpp  Scene2d.cpp
src/widgets/: Widget.cpp  Window.cpp
